tests/conformance/syntax/positive/annotated_patterns_valid.ditt
module Syntax.AnnotatedPatterns where

postulate A : Cat
postulate B : Cat
fst : (p : (A * B)) -> A = \(x : A, y : B). x
