tests/conformance/syntax/negative/annotated_patterns_bad_annotation.ditt
module Syntax.AnnotatedPatternsBad where

postulate A : Cat
postulate B : Cat
bad (p : (A * B)) : A = \(x : , y : B). x
